# ot-harjoitusty-

./: .coveragerc  .env  .pylintrc  README.md  pyproject.toml  tasks.py
data/: highscores.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database_connection.py  event_queue.py  gameloop.py  index.py  initialize_database.py  level.py  ui.py
src/sprites/: food.py  snake.py
src/tests/: gameloop_test.py  level_test.py
