[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Aapo Tuulentie <aapo.tuulentie@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.0"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
pytest = "^7.1.2"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
